add basic grid, clickable cell

--- a/MinesweeperWeb/MinesweeperWeb.csproj
+++ b/MinesweeperWeb/MinesweeperWeb.csproj
@@ -6,6 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\Assets\img\closed.svg" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"></PackageReference>
 	</ItemGroup>
